--- a/notebooks/tts/fish-speech.ipynb
+++ b/notebooks/tts/fish-speech.ipynb
@@ -72,6 +72,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install Packages\n",
+    "# !sudo apt install libasound-dev portaudio19-dev libportaudio2 libportaudiocpp0\n",
+    "# !pip install pyaudio\n",
+    "# !pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121\n",
+    "# !pip install huggingface_hub\n",
+    "# !pip install triton\n",
+    "# !pip install ."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -105,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +137,7 @@
       "Usage: inference.py [OPTIONS]\n",
       "Try 'inference.py --help' for help.\n",
       "\n",
-      "Error: Invalid value for '--input-path' / '-i': Path '{prompt_wav}' does not exist.\n"
+      "Error: Invalid value for '--input-path' / '-i': Path 'test.wav' does not exist.\n"
      ]
     }
    ],
@@ -137,30 +152,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Usage: inference.py [OPTIONS]\n",
-      "Try 'inference.py --help' for help.\n",
-      "\n",
-      "Error: Invalid value for '--input-path' / '-i': Path 'fake.npy' does not exist.\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "rate must be specified when data is a numpy array or list of audio samples.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Play\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mIPython\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdisplay\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Audio, display\n\u001b[0;32m----> 6\u001b[0m display(\u001b[43mAudio\u001b[49m\u001b[43m(\u001b[49m\u001b[43moutput_wav\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mautoplay\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m)\n",
-      "File \u001b[0;32m~/miniforge3/envs/audio_chat/lib/python3.10/site-packages/IPython/lib/display.py:129\u001b[0m, in \u001b[0;36mAudio.__init__\u001b[0;34m(self, data, filename, url, embed, rate, autoplay, normalize, element_id)\u001b[0m\n\u001b[1;32m    127\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata, \u001b[38;5;28mbytes\u001b[39m):\n\u001b[1;32m    128\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m rate \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 129\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrate must be specified when data is a numpy array or list of audio samples.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    130\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;241m=\u001b[39m Audio\u001b[38;5;241m.\u001b[39m_make_wav(data, rate, normalize)\n",
-      "\u001b[0;31mValueError\u001b[0m: rate must be specified when data is a numpy array or list of audio samples."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_npy = \"fake.npy\"\n",
     "output_wav = \"fake_Speaker1.wav\"\n",
