tts update streamlit

--- a/notebooks/tts/XTTS-v2.ipynb
+++ b/notebooks/tts/XTTS-v2.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
     "config.load_json(f\"{model_dir}config.json\")\n",
     "model = Xtts.init_from_config(config)\n",
     "model.load_checkpoint(config, checkpoint_dir=f\"{model_dir}\", eval=True)\n",
-    "model.cuda()\n",
+    "model.to(\"cuda\")\n",
     "\n",
     "tts_paths = \"data/ttsvoice/\"\n",
     "reference_audios = [tts_paths + i for i in os.listdir(f\"{tts_paths}\")]\n",
