bark speed testing

--- a/notebooks/tts/bark-small.ipynb
+++ b/notebooks/tts/bark-small.ipynb
@@ -46,8 +46,8 @@
     "import torch\n",
     "\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "processor = AutoProcessor.from_pretrained(\"suno/bark\")\n",
-    "model = AutoModel.from_pretrained(\"suno/bark\").to(device)\n",
+    "processor = AutoProcessor.from_pretrained(\"suno/bark-small\")\n",
+    "model = AutoModel.from_pretrained(\"suno/bark-small\").to(device)\n",
     "model =  model.to_bettertransformer()"
    ]
   },
@@ -86,7 +86,7 @@
     "\n",
     "sampling_rate = model.generation_config.sample_rate\n",
     "# Audio(speech_values.cpu().numpy().squeeze(), rate=sampling_rate)\n",
-    "scipy.io.wavfile.write(\"bark_out.wav\", rate=sampling_rate, data=speech_values.cpu().numpy().squeeze())"
+    "scipy.io.wavfile.write(\"bark_out_small.wav\", rate=sampling_rate, data=speech_values.cpu().numpy().squeeze())"
    ]
   },
   {
